--- a/frontend/src/styles/index.scss
+++ b/frontend/src/styles/index.scss
@@ -4,24 +4,28 @@
 
 @import 'tailwindcss/utilities';
 
+body {
+	background-color: rgb(234, 241, 243);
+}
+
 #root {
 	min-width: 400px;
 }
 
 a {
-	color: inherit; 
-	text-decoration: none; 
+	color: inherit;
+	text-decoration: none;
 }
 
-
-
 .navbar {
+	border-radius: 5px;
 	display: flex;
 	background-color: #d3e5f3;
 	color: rgb(13, 143, 175);
 	font-weight: bold;
 	padding: 15px 30px;
 	margin-bottom: 20px;
+	box-shadow: 3px 10px 20px -3px #728a8d;
 }
 
 .menu_list {
@@ -37,13 +41,16 @@ a {
 	margin-bottom: 0;
 	font-size: 10px;
 }
-.form-control{
+.form-control {
 	border-radius: 5px;
 }
 
+::placeholder {
+	font-style: italic;
+	font-size: 12px;
+}
 
-
-.about-content{
+.about-content {
 	border: 1px rgb(221, 219, 219) solid;
 	padding: 50px 10px 100px;
 	border-radius: 5px;
@@ -51,7 +58,7 @@ a {
 }
 
 .center {
-	display:flex;
+	display: flex;
 	justify-content: center;
 }
 .btn {
@@ -59,17 +66,17 @@ a {
 	padding-right: 100px;
 }
 
-.container{
+.container {
 	max-width: 700px;
 }
 
-.board{
+.board {
 	width: 400px;
 	margin: 0 auto;
 	display: flex;
 	flex-wrap: wrap;
 }
-.cell{
+.cell {
 	flex-direction: row;
 	height: 40px;
 	width: 40px;
@@ -97,24 +104,31 @@ a {
 	margin-bottom: 20px;
 }
 
-.r{
+.r {
 	background-color: rgb(226, 7, 36);
 }
-.b{
+.b {
 	background-color: blue;
 }
-.o{
+.o {
 	background-color: rgb(248, 88, 30);
 }
-.y{
+.y {
 	background-color: rgb(226, 226, 0);
 }
-.g{
+.g {
 	background-color: green;
 }
-.alert{
+.alert {
 	cursor: pointer;
 }
 .alert:hover {
 	border: 2px solid rgb(13, 143, 175);
+}
+
+.guest {
+	text-align: center;
+	font-weight: bold;
+	font-size: 30px;
+	color: rgb(13, 143, 175);
 }
