--- a/frontend/src/styles/index.scss
+++ b/frontend/src/styles/index.scss
@@ -43,6 +43,16 @@ a {
 }
 .form-control {
 	border-radius: 5px;
+	border-color: rgb(13, 143, 175);
+	border-width: 1px;
+}
+.login-form{
+	width: 300px;
+	border: 1px rgb(13, 143, 175) solid;
+	padding: 20px 20px;
+	border-radius: 8px;
+	background-color: white;
+	box-shadow: 3px 10px 20px -3px #728a8d;
 }
 
 ::placeholder {
@@ -62,12 +72,14 @@ a {
 	justify-content: center;
 }
 .btn {
-	padding-left: 100px;
-	padding-right: 100px;
+	padding-left: 50px;
+	padding-right: 50px;
 }
 
 .container {
 	max-width: 700px;
+    display: flex;
+    justify-content: center;
 }
 
 .board {
@@ -146,20 +158,21 @@ a {
 	box-shadow: 0px 0px 15px 2px rgba(141, 156, 165, 0.75);
 }
 .top-title{
-	cursor: pointer;
+	background: linear-gradient(270deg, rgba(180,58,164,1) 0%, rgba(1,109,186,1) 100%);
 	border: #7036dbd5 1px solid;
 	border-radius: 8px;
-	padding: 5px 10px;
-	font-weight: bold;
-	color: aliceblue;
-	background: linear-gradient(270deg, rgba(180,58,164,1) 0%, rgba(1,109,186,1) 100%);
 	box-shadow: 0px 0px 15px 2px rgba(0,125,199,0.75);
+	color: aliceblue;
+	cursor: pointer;
+	font-weight: bold;
+	padding: 5px 10px;
 }
 
 .heading ,.sqr{
-	padding: 3px 5px;
 	font-weight: bolder;
+	padding: 3px 5px;
 }
+
 
 .profile-pic {
 	margin-bottom: 20px;
