--- a/frontend/src/styles/index.scss
+++ b/frontend/src/styles/index.scss
@@ -5,7 +5,7 @@
 @import 'tailwindcss/utilities';
 
 body {
-	background-color: rgb(234, 241, 243);
+	background-color: rgb(241, 247, 248);
 }
 
 #root {
@@ -191,5 +191,8 @@ a {
 	border-radius: 50%;
 }
 
+.logo{
+	width: 30px;
+}
 
 
