--- a/frontend/src/styles/index.scss
+++ b/frontend/src/styles/index.scss
@@ -86,7 +86,7 @@ a {
 }
 
 .board {
-	width: 450px;
+	width: 440px;
 	margin: 0 auto;
 	display: flex;
 	flex-wrap: wrap;
@@ -96,11 +96,11 @@ a {
 	flex-direction: row;
 	height: 45px;
 	width: 45px;
+	border: 1px rgb(202, 202, 202) solid ;
 	border-radius: 5px;
-	background-color: rgb(255, 255, 255);
+	background-color: white;
 	margin: 1px;
 	cursor: pointer;
-	box-shadow: 3px 10px 20px -3px #728a8d;
 }
 
 .add-photo {
