--- a/frontend/src/styles/index.scss
+++ b/frontend/src/styles/index.scss
@@ -172,6 +172,9 @@ a {
 	margin: 0 auto;
 	border-radius: 5px;
 	box-shadow: 3px 10px 20px -3px #728a8d;
+	background-image:  url('https://www.freeiconspng.com/thumbs/bubbles-png/water-bubbles-png-6.png');
+	background-size: 200px;
+	
 }
 .top-title{
 	margin-bottom: 10px;
