--- a/frontend/src/styles/index.scss
+++ b/frontend/src/styles/index.scss
@@ -91,6 +91,7 @@ a {
 	display: flex;
 	flex-wrap: wrap;
 	margin-top: 50px;
+	margin-bottom: 20px;
 }
 .cell {
 	flex-direction: row;
@@ -225,8 +226,20 @@ a {
 .fas {
 	cursor: pointer;
 }
+.btn-box {
 
-//bubble animation
+	display: flex;
+	justify-content: space-around;
+}
+.btn-game{
+	font-weight: bold;
+	color: white;
+}
+
+.btn-game:hover{
+	color: black;
+}
+//bubble animation//////////////////////////////////////
 #background-wrap {
     bottom: 0;
 	left: 0;
