--- a/frontend/src/styles/index.scss
+++ b/frontend/src/styles/index.scss
@@ -165,6 +165,7 @@ a {
 	margin-bottom: 20px;
 	width: 200px;
 	min-height: 200px;
+	cursor: pointer;
 }
 
 .circle {
@@ -197,6 +198,8 @@ a {
 	padding: 20px 5px;
 	box-shadow: 3px 10px 20px -3px #728a8d;
 }
+
+
 
 .top-title {
 	margin-bottom: 10px;
