--- a/frontend/src/styles/index.scss
+++ b/frontend/src/styles/index.scss
@@ -121,19 +121,19 @@ a {
 	margin-bottom: 20px;
 }
 
-.r {
+.red {
 	background-color: rgb(226, 7, 36);
 }
-.b {
+.blue {
 	background-color: blue;
 }
-.o {
+.orange {
 	background-color: rgb(248, 88, 30);
 }
-.y {
+.yellow {
 	background-color: rgb(226, 226, 0);
 }
-.g {
+.green {
 	background-color: green;
 }
 .alert {
