--- a/frontend/src/styles/index.scss
+++ b/frontend/src/styles/index.scss
@@ -202,6 +202,9 @@ a {
 	background-size: 200px;
 
 }
+.line {
+	text-decoration: underline;
+}
 .score-box {
 	display: flex;
 	justify-content: center;
