--- a/frontend/src/styles/index.scss
+++ b/frontend/src/styles/index.scss
@@ -295,6 +295,7 @@ a {
 	font-size: 18px;
 	text-align: center;
 	margin-bottom: 40px;
+	color: maroon;
 }
 
 //bubble animation//////////////////////////////////////
