--- a/frontend/src/styles/index.scss
+++ b/frontend/src/styles/index.scss
@@ -280,6 +280,7 @@ a {
 	background-color: rgba(0, 0, 0, 0.5);
 }
 .popup_open {
+	text-align: center;
 	position: absolute;
 	left: 35%;
 	right: 35%;
@@ -287,15 +288,21 @@ a {
 	bottom: 35%;
 	margin: auto;
 	border-radius: 20px;
-	padding: 40px 33px 10px;
 	background-color: azure;
+	padding-top: 50px;
+	display: inline-block;
+	min-width: 200px;
+	
 }
 .game-over {
 	font-weight: bold;
 	font-size: 18px;
 	text-align: center;
-	margin-bottom: 40px;
+	margin-bottom: 30px;
 	color: maroon;
+}
+.pp-btn{
+	margin-bottom: 20px;
 }
 
 //bubble animation//////////////////////////////////////
@@ -307,6 +314,7 @@ a {
 	top: 0;
 	z-index: -1;
 }
+
 
 /* KEYFRAMES */
 
